adding image property to equipment
