# public/swagger.json
@@ -369,6 +369,9 @@
 						"application/json": {
 							"schema": {
 								"properties": {
+									"image": {
+										"type": "string"
+									},
 									"slug": {
 										"type": "string"
 									},
@@ -380,6 +383,7 @@
 									}
 								},
 								"required": [
+									"image",
 									"slug",
 									"brand",
 									"name"
@@ -417,6 +421,9 @@
 						"application/json": {
 							"schema": {
 								"properties": {
+									"image": {
+										"type": "string"
+									},
 									"slug": {
 										"type": "string"
 									},
@@ -428,6 +435,7 @@
 									}
 								},
 								"required": [
+									"image",
 									"slug",
 									"brand",
 									"name"
@@ -465,6 +473,9 @@
 						"application/json": {
 							"schema": {
 								"properties": {
+									"image": {
+										"type": "string"
+									},
 									"slug": {
 										"type": "string"
 									},
@@ -476,6 +487,7 @@
 									}
 								},
 								"required": [
+									"image",
 									"slug",
 									"brand",
 									"name"
@@ -513,6 +525,9 @@
 						"application/json": {
 							"schema": {
 								"properties": {
+									"image": {
+										"type": "string"
+									},
 									"slug": {
 										"type": "string"
 									},
@@ -524,6 +539,7 @@
 									}
 								},
 								"required": [
+									"image",
 									"slug",
 									"brand",
 									"name"
